kubernetes/_clusters/franklin/apps/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    goldilocks.fairwinds.com/enabled: "true"
