kubernetes/_clusters/franklin/apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.23.16
          ports:
            - containerPort: 3001 # Uptime Kuma web interface
#          env:
#            - name: PUID
#              value: "1000" # Replace with your user ID
#            - name: PGID
#              value: "1000" # Replace with your group ID
#            - name: TZ
#              value: "Europe/Amsterdam" # Replace with your timezone
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma
      volumes:
        - name: uptime-kuma
          persistentVolumeClaim:
            claimName: uptime-kuma
